--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,11 +1,11 @@
 FROM debian:bookworm
 
-RUN apt update && \
-    apt upgrade -y && \
-    apt install -y nginx openssl
+RUN apt update -y && \
+	apt upgrade -y && \
+	apt install -y nginx openssl
 
-COPY ./conf/my_nginx.conf /
+COPY ./config/ft_nginx.conf /
 COPY ./tools/script.sh /
 RUN chmod +x /script.sh
 
-ENTRYPOINT ["/script.sh"]
+ENTRYPOINT [ "/script.sh" ]
