--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,13 +1,12 @@
 FROM debian:bookworm
 
-WORKDIR /var/www/html
-
-RUN apt update && \
-    apt upgrade -y && \
-    apt install -y php-fpm php-mysql curl netcat-openbsd
+RUN apt update -y && \
+	apt upgrade -y && \
+	apt install -y php php-fpm php-mysql curl netcat-openbsd
 
 COPY ./tools/script.sh /
 RUN chmod +x /script.sh
 
 EXPOSE 9000
-ENTRYPOINT ["/script.sh"]
+
+ENTRYPOINT [ "/script.sh" ]
